--- a/Nowa oferta.mdx
+++ b/Nowa oferta.mdx
@@ -1,74 +1,80 @@
 ---
 title: "Nowa oferta"
-description: ""
 ---
 
-
-
 <Frame>
-  <img src="/images/Oferty.png" alt="Zrzut ekranu z interfejsu: Oferta ze zlecenia" style={{ borderRadius: '0.5rem' }} />
+  <img
+    src="/images/Oferty.png"
+    alt="Zrzut ekranu z interfejsu: Oferta ze zlecenia"
+    style={{ borderRadius:"0.5rem" }}
+  />
 </Frame>
 
-To jest interfejs typu "Record review". Po lewej stronie ekranu wyświetlana jest lista rekordów. Szczegóły danego rekordu
-(razem z przyciskami mogącymi na niego wpłynąć), wyświetlane są na prawo od listy. 
+To jest interfejs typu "Record review". Po lewej stronie ekranu wyświetlana jest lista rekordów. Szczegóły danego rekordu (razem z przyciskami mogącymi na niego wpłynąć), wyświetlane są na prawo od listy.
 
 Ten interfejs jest "wglądem" w arkusz ofert. To znaczy że wszystkie zmiany tutaj wprowadzone, są wprowadzane w rekordzie w bazie danych.
 
 ## Lista rekordów
 
 ### Właściwości listy
+
 <Frame>
-  <img src="\images\Oferty-filtry.png" alt="Zrzut ekranu z interfejsu: Oferta- właściwości listy" style={{ borderRadius: '0.5rem' }} />
+  <img
+    src="\images\Oferty-filtry.png"
+    alt="Zrzut ekranu z interfejsu: Oferta- właściwości listy"
+    style={{ borderRadius:"0.5rem" }}
+  />
 </Frame>
 
-W prawym górnym rogu widzimy przyciski. 
+W prawym górnym rogu widzimy przyciski.
 
-- Z symbolem plusa, służy do [utworzenia nowej oferty](). 
+- Z symbolem plusa, służy do [utworzenia nowej oferty]().
 - Z kwadratem i strzałką, otwieta w nowym oknie stronę [oferta ze zlecenia](Oferta%20ze%20zlecenia).
 - 3 kropki, pokazują dodatkowe opcje tj. wydrukowanie rekordu.
 
-Poniżej dużych przycisków widzimy mniejsze, odpowiedzialne za właściwości listy rekordów. 
+Poniżej dużych przycisków widzimy mniejsze, odpowiedzialne za właściwości listy rekordów.
 
 - Po lewej "group", pozwala na grupowanie rekordów
 - Po środku "filter", pozwala na filtrowanie rekordów według dowolnych pól w arkuszu
 - Po prawej "sort", pozwala na wybór sortowania listy, domyślnie wg. daty utworzenia
 
-Po lewej stronie, poniżej napisu "Oferty" możemy wybrać wzór filtrowania. Domyślnie pokazywane są wszystkie rekordy.
-Można również wybrać by pokazywane były wygenerowane/nie wygenerowane oferty.
+Po lewej stronie, poniżej napisu "Oferty" możemy wybrać wzór filtrowania. Domyślnie pokazywane są wszystkie rekordy. Można również wybrać by pokazywane były wygenerowane/nie wygenerowane oferty.
 
-Na samym dole jest pasek wyszukiwania. Możemy tam wyszukać rekord po dowolnej rzeczy obecnej  w [podsumowaniu rekordu](Podsumowanie%20rekordu) 
-(numer oferty/typ/szpital).
+Na samym dole jest pasek wyszukiwania. Możemy tam wyszukać rekord po dowolnej rzeczy obecnej  w [podsumowaniu rekordu](Podsumowanie%20rekordu) (numer oferty/typ/szpital).
 
 ### Podsumowanie rekordu
 
 <Frame>
-  <img src="/images/Oferty-podsumowanie.png" alt="Zrzut ekranu z interfejsu: Oferta ze zlecenia" style={{ borderRadius: '0.5rem' }} />
+  <img
+    src="/images/Oferty-podsumowanie.png"
+    alt="Zrzut ekranu z interfejsu: Oferta ze zlecenia"
+    style={{ borderRadius:"0.5rem" }}
+  />
 </Frame>
 
 #### Pasek i załącznik
 
 Po lewej stronie wyświetlany jest pasek statusu uzależniony od tego czy dana oferta jest w [trybie edycji]().
+
 - Ciemnoszary pasek- rekord w trybie edycji (jak widać na obrazku powyżej).
 - Jasnoszary pasek- rekord poza trybem edycji.
 
 Po prawej od paska widoczne jest pole w którym wyświetlany jest plik oferty. Mógł on zostać wygenerowany lub wklejony ręcznie do rekordu.
 
 <AccordionGroup>
-  <Accordion icon="question-mark" title="Wnioskowanie ze statusu i pliku">
-  Jeżeli status wskazuje na to że rekord jest w trybie edycji i nie widać pliku, można wywnioskować że nie był on jeszcze wygenerowany.
-  
-  Przypadek gdy plik jest obecny a rekord nie jest w trybie edycji świadczy o tym że oferta została wygenerowana i od tego czasu nic w treści
-  rekordu nie było zmieniane.
+  <Accordion title="Wnioskowanie ze statusu i pliku" icon="file-chart-column">
+    Jeżeli status wskazuje na to że rekord jest w trybie edycji i nie widać pliku, można wywnioskować że nie był on jeszcze wygenerowany.
 
-  Warto natomiast zwrócić uwagę na rekordy w trybie edycji z załącznikiem.
+    Przypadek gdy plik jest obecny a rekord nie jest w trybie edycji świadczy o tym że oferta została wygenerowana i od tego czasu nic w treści rekordu nie było zmieniane.
 
-  Może to wskazywać na to że jakieś zmiany zostały wprowadzone w rekordzie już po wygenerowaniu pliku. 
-  
-  Warto wtedy sprawdzić czy aby napewno to co jest w wygenerowanym PDFie zgadza się z danymi w rekordzie. 
-  
-  Po sprawdzeniu poprawności, w takim rekordzie można wyłączyć tryb edycji, trzeba jednak pamiętać że bez względu na to czy były jakieś zmiany, 
-  wygenerowany zostanie nowy plik PDF na podstawie rekordu.  
-</Accordion>
+    Warto natomiast zwrócić uwagę na rekordy w trybie edycji z załącznikiem.
+
+    Może to wskazywać na to że jakieś zmiany zostały wprowadzone w rekordzie już po wygenerowaniu pliku.
+
+    Warto wtedy sprawdzić czy aby napewno to co jest w wygenerowanym PDFie zgadza się z danymi w rekordzie.
+
+    Po sprawdzeniu poprawności, w takim rekordzie można wyłączyć tryb edycji, trzeba jednak pamiętać że bez względu na to czy były jakieś zmiany, wygenerowany zostanie nowy plik PDF na podstawie rekordu.
+  </Accordion>
 </AccordionGroup>
 
 #### Numer, typ, klient
@@ -79,24 +85,60 @@ Na prawo od załącznika, widzimy 3 linijki.
 - Druga zawiera [typ]() oferty.
 - Trzecia zawiera skrót [klienta]().
 
-
 ## Dodawanie nowej oferty
+
 <Frame>
-  <img src="/images/Oferty-nowa.png" alt="Zrzut ekranu, interfejs oferty, nowa oferta" style={{ borderRadius: '0.5rem' }} />
+  <img
+    src="/images/Oferty-nowa.png"
+    alt="Zrzut ekranu, interfejs oferty, nowa oferta"
+    style={{ borderRadius:"0.5rem" }}
+  />
 </Frame>
 
-Po wciśnięciu przycisku z plusem (tego nad listą rekordów), otwiera się okno tworzenia nowej oferty.
-W tym oknie jedynie wybieramy typ ([warunkujący widoczność pól]() w szczegółach rekordu)
+Po wciśnięciu przycisku z plusem (tego nad listą rekordów), otwiera się okno tworzenia nowej oferty. W tym oknie jedynie wybieramy typ (warunkujący [widoczność pól]() w szczegółach rekordu)
 
-<CardGroup cols={1}>
+## Edycja nowej oferty- widok edytowalny
 
-<Card title="Edycja utworzonej oferty" icon="pen-to-square" href="/Nowa%20oferta">
-  Learn MDX syntax and start writing your documentation.
-</Card>
+![obraz.png](/images/obraz.png)
 
+### Typ
 
-</CardGroup>
+Warunkuje widoczność odpowiednich dla siebie pól. Obecnie są 4 typy.
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+- Serwis- oferta na zlecenie serwisowe.
+- Przegląd- oferta na jeden lub więcej przeglądów.
+- Części- oferta na sprzedaż części.
+- Diagnostyka- oferta na diagnostykę urządzenia.
+
+### Data Wystawienia
+
+Ustawiana automatycznie na aktualną datę w momencie utworzenia oferty. 
+
+### Dni na akceptacje
+
+Domyślnie ustawione na 30. Służy do obliczenia ważności oferty.
+
+### Numer oferty sugerowany
+
+Pole typu "formula" mające na celu przechowywanie sugerowanego numeru oferty w sytuacji gdy numer został omyłkowo usunięty. Działą wg. wzoru O-{[Lp](Lp)}-{[miesiąc wystawienia](data%20wystawienia)}-{[rok wystawienia](#data%20wystawienia)}. 
+
+### Numer oferty
+
+Wyświetlany na samej górze ekranu. Po utworzeniu oferty, automatycznie nadawany przez automatyzacje wg. wzoru O-[Lp](#Lp)-[miesiąc wystawienia](##data%20wystawienia)-[rok wystawienia](##data%20wystawienia). 
+
+Po automatycznym uzupełnieniu, być ręcznie edytowany. 
+
+### Kontynuacja
+
+Służy do utworzenia oferty kontynuacyjnej. Za pomocą tego pola wybieramy ofertę poprzedzającą do aktualnej. 
+
+Jeżeli poprzednia oferta nie jest obecna w bazie, możemy ją w w tym miejscu utworzyć
+
+<img
+  src="/images/Zrzutekranu2025-10-09093636.png"
+  alt="Zrzut ekranu 2025-10-09 093636.png"
+  title="Zrzut ekranu 2025-10-09 093636.png"
+  style={{ width:"46%" }}
+/>
+
+### Ważność oferty
